--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-transition-group": "^2.6.0",
     "swiper": "^4.4.6"
   },
   "scripts": {
