--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-transition-group": "^2.6.0",
-    "swiper": "^4.4.6"
+    "swiper": "^4.4.6",
+    "gsap": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
