--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
+    "gsap": "^2.1.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-transition-group": "^2.6.0",
-    "swiper": "^4.4.6",
-    "gsap": "^2.1.2"
+    "redux": "^4.0.1",
+    "redux-axios-middleware": "^4.0.0",
+    "swiper": "^4.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
